--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
     <meta property="twitter:description" content="Your Familia in Business at Santa Clara University" />
     <meta property="twitter:image" content="/og-image.jpg" />
     
-    <!-- Preconnect to external domains -->
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Montserrat:wght@400;500;600;700&family=Open+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
